--- a/example/bootstrap.html
+++ b/example/bootstrap.html
@@ -72,7 +72,7 @@
                             <label for="file" class="col-sm-2 control-label">File (html, css, txt):</label>
 
                             <div class="col-sm-4">
-                                <input name="file" type="file" class="form-control" id="file" multiple>
+                                <input name="file" accept=".png" type="file" class="form-control" id="file" multiple>
                             </div>
                         </div>
                         <div class="form-group">
